--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <title>2nd-attempt</title>
-    <link rel ="stylesheet" href="css/style.css">
+    <link rel ="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
 
     <h1>Some random information.</h1>
 
-    <img=src>
-    <img=src>
-    <img=src>
-    <img=src>
+    <img src="behnam.jpg">
+    <img src="behnam.jpg">
+    <img src="behnam.jpg">
+    <img src="behnam.jpg">
     <p>This is some subtext under an illustration or image</p>
     <p>This is some subtext under an illustration or image</p>
     <p>This is some subtext under an illustration or image</p>
@@ -39,6 +39,8 @@
 
     <h3>Call to action! It's time!</h3>
     <p>Sign up for our product by clicking that button right over there.</p>
+    <p>Photo by <a href="https://unsplash.com/@behy_studio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Behnam Norouzi</a> on <a href="https://unsplash.com/t/business-work?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    </p>
         
     <div class="button2">Sign up</div>
 
