--- a/index.html
+++ b/index.html
@@ -9,41 +9,63 @@
 
 <body>
  <!-- content to go here; divided into sections add html for header body and footer first before coming back to,, -->   
-    <h2>Header Logo</h2>
-    <h3>header link one</h3>
-    <h3>header link two</h3>
-    <h3>header link three</h3>
-     
+ <div class=>"Header Logo"</div>
+ <div class="header">
+    <a>header link one</a>
+    <a>header link two</a>
+    <a>header link three</a> 
+    </div>
+<div class=section1>     
     <h1>This website is awesome</h1>
     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
     <div class="button">Sign up</div>
-    <img=<source>href
+    <img src="behnam.jpg"
+    alt="An image of a calendar on a mobile phone end of January going into February"
+    width="350"
+    height="200"/>
+</div>
 
-    <h1>Some random information.</h1>
+<div class="section2">
+<h1>Some random information.</h1>
 
-    <img src="behnam.jpg">
-    <img src="behnam.jpg">
-    <img src="behnam.jpg">
-    <img src="behnam.jpg">
-    <p>This is some subtext under an illustration or image</p>
-    <p>This is some subtext under an illustration or image</p>
-    <p>This is some subtext under an illustration or image</p>
-    <p>This is some subtext under an illustration or image</p>
-
+    <img src="behnam.jpg"
+    alt="An image of a calendar on a mobile phone end of January going into February"
+    width="100"
+    height="150"/>
+    <img src="behnam.jpg"
+    alt="An image of a calendar on a mobile phone end of January going into February"
+    width="100"
+    height="150"/>
+    <img src="behnam.jpg"
+    alt="An image of a calendar on a mobile phone end of January going into February"
+    width="100"
+    height="150"/>
+    <img src="behnam.jpg"
+    alt="An image of a calendar on a mobile phone end of January going into February"
+    width="100"
+    height="150"/>
+    <p>Will this webpage be finished in time for February?</p>
+    <p>Will this webpage be finished in time for February?</p>
+    <p>Will this webpage be finished in time for February?</p>
+    <p>Will this webpage be finished in time for February?</p>
+</div>
+<div class="section3">
     <p>This is an inspiring quote, or a testimonial from a 
         customer. Maybe it's just filling up space, or 
         maybe people will actually read it. 
         Who knows? All I know is that it looks nice.</p>
 
     <p>-Thor, God of Thunder</p>
+</div>
 
+<div class="footer">
     <h3>Call to action! It's time!</h3>
     <p>Sign up for our product by clicking that button right over there.</p>
     <p>Photo by <a href="https://unsplash.com/@behy_studio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Behnam Norouzi</a> on <a href="https://unsplash.com/t/business-work?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </p>
         
     <div class="button2">Sign up</div>
-
+</div>
 
 </body>
 
