--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
  <!-- content to go here; divided into sections add html for header body and footer first before coming back to,, -->   
- <div class=>"Header Logo"</div>
+ 
  <div class="header">
+    <h3>Header Logo</h3>
     <a>header link one</a>
     <a>header link two</a>
     <a>header link three</a> 
@@ -26,7 +27,7 @@
 </div>
 
 <div class="section2">
-<h1>Some random information.</h1>
+<h2>Some random information.</h2>
 
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
