--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
  <!-- content to go here; divided into sections add html for header body and footer first before coming back to,, -->   
  
  <div class="header">
-    <h3>Header Logo</h3>
+    <div id="HeaderLogo">Header Logo</div>
     <a>header link one</a>
     <a>header link two</a>
     <a>header link three</a> 
     </div>
 <div class=section1>     
     <h1>This website is awesome</h1>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+    <p1>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p1>
     <div class="button">Sign up</div>
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
-    width="350"
-    height="200"/>
+    width="500"
+    height="300"
+    />
 </div>
 
 <div class="section2">
-<h2>Some random information.</h2>
+<h2>Some random information.</h>
 
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
