--- a/index.html
+++ b/index.html
@@ -20,51 +20,51 @@
     <h1>This website is awesome</h1>
     <p1>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p1>
     <div class="button">Sign up</div>
-    <img src="behnam.jpg"
+    <img src="becurious.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
     width="500"
     height="300"
     />
 </div>
-
+<h2>Some random information.</h2>
 <div class="section2">
-<h2>Some random information.</h>
 
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
-    width="100"
+    width="150"
     height="150"/>
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
-    width="100"
+    width="150"
     height="150"/>
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
-    width="100"
+    width="150"
     height="150"/>
     <img src="behnam.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
-    width="100"
+    width="150"
     height="150"/>
-    <p>Will this webpage be finished in time for February?</p>
-    <p>Will this webpage be finished in time for February?</p>
-    <p>Will this webpage be finished in time for February?</p>
-    <p>Will this webpage be finished in time for February?</p>
+    <p2>Will this webpage be finished in time for February?</p2>
+    <p3>Will this webpage be finished in time for February?</p3>
+    <p4>Will this webpage be finished in time for February?</p4>
+    <p5>Will this webpage be finished in time for February?</p5>
 </div>
 <div class="section3">
-    <p>This is an inspiring quote, or a testimonial from a 
+    <p6>This is an inspiring quote, or a testimonial from a 
         customer. Maybe it's just filling up space, or 
         maybe people will actually read it. 
-        Who knows? All I know is that it looks nice.</p>
+        Who knows? All I know is that it looks nice.</p6>
 
-    <p>-Thor, God of Thunder</p>
+    <p7>-Thor, God of Thunder</p7>
 </div>
 
 <div class="footer">
     <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there.</p>
-    <p>Photo by <a href="https://unsplash.com/@behy_studio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Behnam Norouzi</a> on <a href="https://unsplash.com/t/business-work?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </p>
+    <p8>Sign up for our product by clicking that button right over there.</p8>
+    <p9>Photo by <a href="https://unsplash.com/@jhonkasalo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joakim Honkasalo</a> on <a href="https://unsplash.com/s/photos/curious?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+    </a>
+    </p9>
         
     <div class="button2">Sign up</div>
 </div>
