--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <div class="footer">
     <h3>Call to action! It's time!</h3>
-    <p8>Sign up for our product by clicking that button right over there.</p8>
+    <p8>Sign up for the advanced level course by clicking the button on the right.</p8>
     <p9>Photo by <a href="https://unsplash.com/@jhonkasalo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joakim Honkasalo</a> on <a href="https://unsplash.com/s/photos/curious?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </a>
     </p9>
