Update images and footer references

--- a/index.html
+++ b/index.html
@@ -17,53 +17,58 @@
     <a>header link three</a> 
     </div>
 <div class=section1>     
-    <h1>This website is awesome</h1>
-    <p1>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p1>
+    <h1>Dancing in the Moment</h1>
+    <p1>Challenge yourself to be curious, listen at level 6 and empower your colleagues. Always enjoy the music.</p1>
     <div class="button">Sign up</div>
-    <img src="becurious.jpg"
-    alt="An image of a calendar on a mobile phone end of January going into February"
+    <img src="dancing.jpg"
+    alt="An image of somebody dancing in the moment."
     width="500"
     height="300"
     />
 </div>
-<h2>Some random information.</h2>
+<h2>Dance Steps.</h2>
 <div class="section2">
 
-    <img src="behnam.jpg"
+    <img src="confidence.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
     width="150"
     height="150"/>
-    <img src="behnam.jpg"
+    <img src="confidential.jpg"
+    alt="An image of a woman in a mask going shh!"
+    width="150"
+    height="150"/>
+    <img src="listen.jpg"
     alt="An image of a calendar on a mobile phone end of January going into February"
     width="150"
     height="150"/>
-    <img src="behnam.jpg"
-    alt="An image of a calendar on a mobile phone end of January going into February"
+    <img src="conversations.jpg"
+    alt="An i"
     width="150"
     height="150"/>
-    <img src="behnam.jpg"
-    alt="An image of a calendar on a mobile phone end of January going into February"
-    width="150"
-    height="150"/>
-    <p2>Will this webpage be finished in time for February?</p2>
-    <p3>Will this webpage be finished in time for February?</p3>
-    <p4>Will this webpage be finished in time for February?</p4>
-    <p5>Will this webpage be finished in time for February?</p5>
+    <p2>Confidence in my approach</p2>
+    <p3>Confidence to insist on the need for confidentiality</p3>
+    <p4>Confidence that I can be an effective listener</p4>
+    <p5>Confidence to explore deeper level conversations</p5>
 </div>
 <div class="section3">
-    <p6>This is an inspiring quote, or a testimonial from a 
-        customer. Maybe it's just filling up space, or 
-        maybe people will actually read it. 
-        Who knows? All I know is that it looks nice.</p6>
+    <p6>The most impactful activities were the roleplays and discussions about
+    values. It struck me how much we learnt in such a short conversation.
+    My ALS challenge was surrounding ESD - hopefully we can collaborate on this in the future.
+    
+    </p6>
 
-    <p7>-Thor, God of Thunder</p7>
+    <p7>@TeamFrances28, The Sheffield College</p7>
 </div>
 
 <div class="footer">
     <h3>Call to action! It's time!</h3>
     <p8>Sign up for the advanced level course by clicking the button on the right.</p8>
-    <p9>Photo by <a href="https://unsplash.com/@jhonkasalo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joakim Honkasalo</a> on <a href="https://unsplash.com/s/photos/curious?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-    </a>
+    <p9>Photos by <a href="https://unsplash.com/@claybanks?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Clay Banks</a><a href="https://unsplash.com/s/photos/dancing?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">h</a>
+        ,<a href="https://unsplash.com/@francogio?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Franco Antonio Giovanella</a><a href="https://unsplash.com/s/photos/confidential?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"></a>
+        ,<a href="https://unsplash.com/@enginakyurt?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">engin akyurt</a><a href="https://unsplash.com/s/photos/confidential?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"></a>
+        ,<a href="https://unsplash.com/@blakeweyland?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Blake Weyland</a><a href="https://unsplash.com/s/photos/confidence?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"></a>
+        ,<a href="https://unsplash.com/@cristina_gottardi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Cristina Gottardi</a> on <a href="https://unsplash.com/s/photos/deep-conversations?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  
     </p9>
         
     <div class="button2">Sign up</div>
