drop shadow button 2

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
  
  <div class="header">
     <div id="HeaderLogo">Header Logo</div>
-    <a>header link one</a>
-    <a>header link two</a>
-    <a>header link three</a> 
+    <a href="https://www.youtube.com/watch?v=uEBQMLEK7_s">A-Z</a>
+    <a href="https://www.youtube.com/watch?v=VtBpEjC57sE">Song</a>
+    <a href="https://chandlercoaches.com/dancing-in-the-moment/"> Article</a> 
     </div>
 <div class=section1>     
     <h1>Dancing in the Moment</h1>
