--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
  <!-- content to go here; divided into sections add html for header body and footer first before coming back to,, -->   
  
  <div class="header">
-    <div id="HeaderLogo">Header Logo</div>
+    <img class="logo" src="ClipartKey_2876783.png" alt="logo of colorful silhouette dancing in the moment"
+    
+    height="30px"
+    width="30px"/>
     <a href="https://www.youtube.com/watch?v=uEBQMLEK7_s">A-Z</a>
     <a href="https://www.youtube.com/watch?v=VtBpEjC57sE">Song</a>
     <a href="https://chandlercoaches.com/dancing-in-the-moment/"> Article</a> 
