--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
  <!-- content to go here; divided into sections add html for header body and footer first before coming back to,, -->   
  
  <div class="header">
-    <img class="logo" src="ClipartKey_2876783.png" alt="logo of colorful silhouette dancing in the moment"
-    
+  <!--  <img class="logo" src="ClipartKey_2876783.png" alt="logo of colorful silhouette dancing in the moment"
     height="30px"
-    width="30px"/>
+    width="30px"/> -->
     <a href="https://www.youtube.com/watch?v=uEBQMLEK7_s">A-Z</a>
     <a href="https://www.youtube.com/watch?v=VtBpEjC57sE">Song</a>
     <a href="https://chandlercoaches.com/dancing-in-the-moment/"> Article</a> 
     </div>
 <div class=section1>     
     <h1>Dancing in the Moment</h1>
-    <p1>Challenge yourself to be curious, listen at level 6 and empower your colleagues. Always enjoy the music.</p1>
+    <p1>Challenge yourself to be curious & listen at level 6 to empower your clients. Always enjoy the music.</p1>
     <div class="button">Sign up</div>
     <img src="dancing.jpg"
     alt="An image of somebody dancing in the moment."
